[tool.poetry]
name = "machine-learning-template"
version = "0.1.0"
description = "A basic template to structure your machine learning project."
authors = ["Dominik Linsmayer"]
license = "Apache License"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.2"
pandas = "^1.3.3"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
scipy = "^1.12.0"
scikit-learn = "^1.4.1"
optuna = "^3.5.0"
dask = "^2024.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
plotly = "^5.19.0"
jupyterlab = "^4.1.3"
dvc = "^3.48.2"
mlflow = {extras = ["genai"], version = "^2.11.0"}

[tool.poetry.dev-dependencies]
pytest = "^8.1.0"

[tool.poetry.extras]
documentation = ["mkdocs"]

[tool.poetry.dependencies.mkdocs]
version = "^1.2.3"
optional = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"